# instagram-tools

./: .gitignore  .gitleaks.toml  BACKLOG.md  CLAUDE.md  README.md  ROADMAP.md  desktop.ini  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.githooks/: pre-commit
apps/api/: .env.example  README.md  openapi.json  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 3a7b740b4593_create_jobs_table.py  b2c1d4e5f6a7_jobs_durability_and_cost.py
apps/api/app/: config.py  main.py
apps/api/app/core/: auth.py  cache.py  config.py  db.py
apps/api/app/db/: session.py
apps/api/app/integrations/instagram/: download.py  extractor.py  hashtags.py  http.py  profile.py  session.py
apps/api/app/jobs/: handlers.py  queue.py  quota.py  reaper.py  runner.py  worker.py
apps/api/app/media/: audio.py  downloader.py
apps/api/app/models/: job.py
apps/api/app/providers/llm/: __init__.py  anthropic.py  base.py  openai.py  pricing.py
apps/api/app/providers/transcription/: __init__.py  assemblyai.py  local_whisper.py  openai.py
apps/api/app/shared/: audio.py  auth.py  downloader.py  errors.py  ig_download.py  ig_extractor.py  ig_http.py  ig_profile.py  jobs.py  logging_setup.py
apps/api/app/tools/download/: router.py  schemas.py  service.py
apps/api/app/tools/profile/: router.py  schemas.py  service.py
apps/api/app/tools/transcribe/: router.py  schemas.py  service.py
apps/api/scripts/: export_openapi.py
apps/api/tests/: conftest.py  test_app.py  test_cache_llm.py  test_jobs.py  test_parsing.py
(+117 files in other folders)
